<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Giovanni Vitiello</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">Hi, my name is Giovanni.
        \n\nI love pizza and fish.
        \n\nI love pizza and fish.
        \n\nI\'m a graduate in aerospace engineer.\n\n\n\n\n
        \n\nI love football.
        \n\nI\'m married with Beatrix.
        \n\nWe have a son called Rachele.
        \n\n\n\nBye
        </string>
    <string name="green_circle">Green circle</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
</resources>
