<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/name_text"
            android:textAlignment="center"
            style="@style/NameStyle"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textPersonName"
            android:ems="10"
            android:id="@+id/nickname_edit" style="@style/NameStyle" android:textAlignment="center"
            android:hint="@string/what_is_your_nickname"/>
    <Button
            android:text="@string/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/done_button"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_margin="@dimen/layout_margin"
            android:fontFamily="@font/roboto"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/star_image"
            android:contentDescription="@string/yellow_star"
            android:layout_marginTop="16dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bio_scroll">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/presence_online"
                    android:id="@+id/imageView2"
                    android:contentDescription="@string/green_circle"
                    android:layout_margin="16dp"/>
            <TextView
                    android:text="@string/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bio_test"
                    style="@style/NameStyle"
                    android:lineSpacingMultiplier="1.2"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
